Fix mobile overflow + paste problem on contenteditable - 30min

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -24,7 +24,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.title-font {
     font-family: "Black Han Sans", sans-serif;
 }
 
